--- a/index.html
+++ b/index.html
@@ -98,6 +98,59 @@
       Enter name: <input type="text" name="fname">
       <input type="submit" value="Submit">
     </form>
+    <h2>Output - Document Write</h2>
+    <button class="btn btn-success mb-2" onclick="dw()">
+      5+6 = ?
+    </button>
+    <button type="button" class="btn btn-danger mb-2" onclick="document.write(8 + 10)">Try it</button>
+    <h2>Output - Window Print</h2>
+    <button type="button" class="btn btn-danger mb-2" onclick="window.print()">Print this page</button>
+
+    <h2>Data Type</h2>
+    <h3>JavaScript Booleans</h3>
+
+<p>Booleans can have two values: true or false:</p>
+<button type="button" class="btn btn-danger mb-2" onclick="blns()">Booleans</button>
+<p id="blns"></p>
+<button type="button" class="btn btn-danger mb-2" onclick="blns2()">Booleans 2</button>
+<p id="blns2"></p>
+    <h3>JavaScript Arrays</h3>
+
+    <p>Array indexes are zero-based, which means the first item is [0].</p>
+<button type="button" class="btn btn-danger mb-2" onclick="array()">Array</button>
+<p id="array"></p>
+<button type="button" class="btn btn-danger mb-2" onclick="arrayC()">Array Color</button>
+<p id="arrayC"></p>
+    <h3>JavaScript Objects</h3>
+<button type="button" class="btn btn-danger mb-2" onclick="object()">Object</button>
+<p id="object"></p>
+<button type="button" class="btn btn-danger mb-2" onclick="object2()">Object 2</button>
+<p id="object2"></p>
+
+<h3>JavaScript Operators</h3>
+
+<p>x = 5, y = 2, calculate z = x + y, and display z:</p>
+<button type="button" class="btn btn-danger mb-2" onclick="op()" id="op">Click Here to Calculation</button>
+<p>x = 5, y = 2, calculate z = x - y, and display z:</p>
+<button type="button" class="btn btn-danger mb-2" onclick="op2()" id="op2">Click Here to Calculation</button>
+<p>x = 5, y = 2, calculate z = x * y, and display z:</p>
+<button type="button" class="btn btn-danger mb-2" onclick="op3()" id="op3">Click Here to Calculation</button>
+<p>x = 5, y = 2, calculate z = x / y, and display z:</p>
+<button type="button" class="btn btn-danger mb-2" onclick="op6()" id="op6">Click Here to Calculation</button>
+<p>x = 5, y = 2, calculate z = x % y, and display z:</p>
+<button type="button" class="btn btn-danger mb-2" onclick="op7()" id="op7">Click Here to Calculation</button>
+<p>a = 4, b = 3,x = 5, y = 2, calculate z = x * y - (a + b), and display z:</p>
+<button type="button" class="btn btn-danger mb-2" onclick="op8()" id="op8">Click Here to Calculation</button>
+<p>a = 4, b = 3, x = 5, y = 2, calculate z =  x / y - (a - b), and display z:</p>
+<button type="button" class="btn btn-danger mb-2" onclick="op9()" id="op9">Click Here to Calculation</button>
+<p>a = 4, b = 3, x = 5, y = 2, calculate z = x % y - (a + b), and display z:</p>
+<button type="button" class="btn btn-danger mb-2" onclick="op10()" id="op10">Click Here to Calculation</button>
+<h4>The += Operator</h4>
+<button type="button" class="btn btn-danger mb-2" onclick="op4()" id="op4">x += 5</button>
+<p>Adding a number and a string, returns a string.</p>
+<button type="button" class="btn btn-danger mb-2" onclick="op5()" id="op5">Show all</button>
+
+
   </div>
 
 
